# RomanianNewsWebScraper

./: flake.nix  get_web_links.py  pyproject.toml  scraper.py  selenium_news.bak  selenium_news_results.json  test_news.py  test_news_providers.ipynb  text extract.ipynb  texts.json
