[tool.poetry]
name = "webnewsscraper"
version = "0.1.0"
description = ""
authors = ["CakeVision <andreicodorean1811@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
selenium = "^4.26.1"
undetected-chromedriver = "^3.5.5"
numpy = "^2.1.3"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
